First round of edits

--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -8,6 +8,10 @@ body {
     background-color: #d9dcd6;
 }
 
+/* -------------------------------------- */
+/* ----- BEGIN HEADER / NAVIGATION  ----- */
+/* -------------------------------------- */
+
 .header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
@@ -41,6 +45,10 @@ body {
     margin-left: 25px;
 }
 
+/* -------------------------------------- */
+/* ------ END HEADER / NAVIGATION  ------ */
+/* -------------------------------------- */
+
 a {
     color: #ffffff;
     text-decoration: none;
@@ -50,13 +58,17 @@ p {
     font-size: 16px;
 }
 
+/* -------------------------------------- */
+/* ----- BEGIN HERO / MAIN CONTENT  ----- */
+/* -------------------------------------- */
+
 .hero {
     height: 800px;
     width: 100%;
     margin-bottom: 25px;
     background-image: url("../images/digital-marketing-meeting.jpg");
     background-size: cover;
-    background-position: center;
+    background-position: center; 
 }
 
 .float-left {
@@ -75,9 +87,36 @@ p {
     margin-left: 20px;
 }
 
+.content-title {
+    margin-bottom: 20px;
+    padding: 50px;
+    height: 300px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background-color: #0072bb;
+    color: #ffffff;
+}
+
+.content-title img {
+    max-height: 200px;
+}
+
+.content-title h2 {
+    margin-bottom: 20px;
+    font-size: 36px;
+    width: 50%
+}
+
+/* -------------------------------------- */
+/* ------ END HERO / MAIN CONTENT ------- */
+/* -------------------------------------- */
+
+/* -------------------------------------- */
+/* ------ BEGIN BENEFITS SIDE BAR ------- */
+/* -------------------------------------- */
+
 .benefits {
     margin-right: 20px;
-    padding: 20px;
+    padding: 50px;
     clear: both;
     float: right;
     width: 20%;
@@ -86,107 +125,29 @@ p {
     background-color: #2589bd;
 }
 
-.benefit-lead {
+.benefit {
     margin-bottom: 32px;
     color: #ffffff;
 }
 
-.benefit-brand {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit-cost {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit-lead h3 {
+.benefit h3 {
     margin-bottom: 10px;
     text-align: center;
 }
 
-.benefit-brand h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-cost h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-lead img {
+.benefit img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
 }
 
-.benefit-brand img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
+/* -------------------------------------- */
+/* ------- END BENEFITS SIDE BAR -------- */
+/* -------------------------------------- */
 
-.benefit-cost img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
-.search-engine-optimization {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.online-reputation-management {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.social-media-marketing {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.search-engine-optimization img {
-    max-height: 200px;
-}
-
-.online-reputation-management img {
-    max-height: 200px;
-}
-
-.social-media-marketing img {
-    max-height: 200px;
-}
-
-.search-engine-optimization h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.online-reputation-management h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.social-media-marketing h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
+/* -------------------------------------- */
+/* ------------ BEGIN FOOTER  ----------- */
+/* -------------------------------------- */
 
 .footer {
     padding: 30px;
@@ -198,3 +159,7 @@ p {
 .footer h2 {
     font-size: 20px;
 }
+
+/* -------------------------------------- */
+/* ------------- END FOOTER  ------------ */
+/* -------------------------------------- */
