--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -8,6 +8,15 @@ body {
     background-color: #d9dcd6;
 }
 
+a {
+    color: #ffffff;
+    text-decoration: none;
+}
+
+p {
+    font-size: 16px;
+}
+
 /* -------------------------------------- */
 /* ----- BEGIN HEADER / NAVIGATION  ----- */
 /* -------------------------------------- */
@@ -32,7 +41,7 @@ body {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: 'Gill Sans', 'Gill Sans MT', 'Calibri', 'Trebuchet MS', sans-serif;
     font-size: 20px;
 }
 
@@ -49,36 +58,29 @@ body {
 /* ------ END HEADER / NAVIGATION  ------ */
 /* -------------------------------------- */
 
-a {
-    color: #ffffff;
-    text-decoration: none;
-}
-
-p {
-    font-size: 16px;
-}
-
 /* -------------------------------------- */
 /* ----- BEGIN HERO / MAIN CONTENT  ----- */
 /* -------------------------------------- */
 
 .hero {
-    height: 800px;
+    height: 1250px;
     width: 100%;
-    margin-bottom: 25px;
-    background-image: url("../images/digital-marketing-meeting.jpg");
-    background-size: cover;
-    background-position: center; 
+    margin-bottom: 45px;
+}
+
+.hero img {
+    max-width: 100%;
+    object-fit: contain;
 }
 
 .float-left {
     float: left;
-    margin-right: 25px;
+    margin-right: 40px;
 }
 
 .float-right {
     float: right;
-    margin-left: 25px;
+    margin-left: 70px;
 }
 
 .content {
@@ -90,20 +92,28 @@ p {
 .content-title {
     margin-bottom: 20px;
     padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    height: 400px;
+    font-family: 'Gill Sans', 'Gill Sans MT', 'Calibri', 'Trebuchet MS', sans-serif;
     background-color: #0072bb;
     color: #ffffff;
 }
 
 .content-title img {
-    max-height: 200px;
+    max-height: 300px;
+    position: center;
 }
 
 .content-title h2 {
     margin-bottom: 20px;
-    font-size: 36px;
-    width: 50%
+    font-size: 40px;
+    width: 65%;
+}
+
+.content-title p {
+    font-size: 20px;
+    word-spacing: 5px;
+    margin-right: 20px;
+    width: 85%;
 }
 
 /* -------------------------------------- */
@@ -116,12 +126,13 @@ p {
 
 .benefits {
     margin-right: 20px;
-    padding: 50px;
+    margin-left: 0px;
+    padding: 40px;
     clear: both;
     float: right;
     width: 20%;
     height: 100%;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: 'Gill Sans', 'Gill Sans MT', 'Calibri', 'Trebuchet MS', sans-serif;
     background-color: #2589bd;
 }
 
@@ -131,14 +142,21 @@ p {
 }
 
 .benefit h3 {
-    margin-bottom: 10px;
     text-align: center;
+    font-size: 25px;
+}
+
+.benefit p {
+    font-size: 20px;
+    text-align: left;
+    margin: 0 auto;
+    width: 85%;
 }
 
 .benefit img {
     display: block;
-    margin: 10px auto;
-    max-width: 150px;
+    margin: 20px auto;
+    max-width: 200px;
 }
 
 /* -------------------------------------- */
